# aoc2024

./: .gitignore  dune-project
day01/: dune  main.ml
day02/: dune  main.ml
day03/: dune  main.ml
day04/: dune  main.ml
day05/: dune  main.ml
day06/: dune  main.ml
day07/: dune  main.ml
day08/: dune  main.ml
day09/: dune  main.ml
day10/: dune  main.ml
day11/: dune  main.ml
day12/: dune  main.ml
day13/: dune  main.ml
day14/: dune  main.ml
day15/: dune  main.ml
day16/: dune  main.ml
day17/: dune  main.ml
day18/: dune  main.ml
day19/: dune  main.ml
lib/: files.ml  lists.ml
