(lang dune 3.16)

(name aoc2024)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Max Prokopiev")

(maintainers "Max Prokopiev")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name aoc2024)
 (synopsis "AoC 2024 solutions in OCaml")
 (description "AoC 2024 solutions in OCaml")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))
